2013-10-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readascii df_readmatrix):  If the first field of a
	tab-separated csv file was empty, it would be incorrectly ignored when
	processing that input line.

2013-10-25  Thomas Bleher <tbleher@gmx.de>

	* src/getcolor.c (quantize_gray):  Windows compile error ("small" is not
	accepted as a variable name).

2013-10-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot.c (main):  If commands are being executed interactively
	because the user said something like "gnuplot -", then execution should
	continue after an error message just as in a normal interactive session.
	Bug #1295

	* src/mouse.c (event_reset):  Must not send commands to the terminal if
	it has not yet been initialized.

2013-10-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot.c (main):  If commands are being executed interactively
	because the user said something like "gnuplot -", then execution should
	continue after an error message just as in a normal interactive session.
	Bug #1295

2013-10-21  Christoph Bersch <usenet@bersch.net>

	* src/gadgets.h  src/graphics.c  src/graphics.h src/save.c src/set.c
	demo/clipobject.dem docs/gnuplot.doc:
	New object attribute clip/noclip.  "clip" retains the current default,
	clip to plot boundary unless one or more vertices are given in screen
	coordinates.  "noclip" clips to the canvas. Does not fix broken ellipse
	clipping.

2013-10-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.h src/set.c src/getcolor.c (quantize_gray):
	Change the algorithm used to assign palette colors in the case
	   set palette defined (...) maxcolors N
	where the gradient boundaries are unevenly spaced. Previous versions
	of quantize_gray() have shown a variety of bad outcomes.  This version
	has fewer, less ugly, bad outcomes but it is still sensitive to the
	choice of maxcolors.  Try changing maxcolors by +/- one if the generated
	palette is bad.
	Bug #1140 and others
